# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
migrations/: 20210524183252_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
