[package]
name = "zero2prod"
version = "0.1.0"
authors = ["James Daly <jamsiedaly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
reqwest = "0.11"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
