[package]
name = "zero2prod"
version = "0.1.0"
authors = ["James Daly <jamsiedaly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
config = "0.11.0"
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
tokio = { version = "1", features = ["macros"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
